--- a/BashGate/Base.lproj/Main.storyboard
+++ b/BashGate/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     <constraint firstAttribute="width" constant="200" id="9pp-ef-BuI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYq-Sa-4dr">
                                 <rect key="frame" x="182" y="267" width="66" height="35"/>
@@ -39,7 +39,7 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                 <connections>
                                     <action selector="loginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7ZO-7X-OdJ"/>
-                                    <segue destination="K3c-r5-HzL" kind="presentation" id="HMG-iM-yZ7"/>
+                                    <segue destination="K3c-r5-HzL" kind="presentation" identifier="loginSegueIdentifier" modalPresentationStyle="fullScreen" id="HMG-iM-yZ7"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kJu-5X-wre">
@@ -55,7 +55,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.96841138599999999" green="0.92729578228996301" blue="0.79844728030854939" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.96841138599999999" green="0.95196598168825874" blue="0.907083733534919" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="fS2-DR-rZf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1vk-Mw-nb0"/>
                             <constraint firstItem="kJu-5X-wre" firstAttribute="top" secondItem="WYq-Sa-4dr" secondAttribute="bottom" constant="20" id="9FJ-zq-WSm"/>
@@ -78,7 +78,7 @@
             </objects>
             <point key="canvasLocation" x="-57" y="256"/>
         </scene>
-        <!--Item-->
+        <!--ProfileVC-->
         <scene sceneID="FpC-Ol-6lC">
             <objects>
                 <viewController id="QZT-V2-SQt" customClass="ProfileVC" customModule="BashGate" customModuleProvider="target" sceneMemberID="viewController">
@@ -92,7 +92,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1lp-4R-BDF"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96841138599999999" green="0.94470253660000003" blue="0.86375066869999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="1lp-4R-BDF" firstAttribute="bottom" secondItem="DxJ-ag-ehz" secondAttribute="bottom" id="7lR-8e-qrH"/>
                             <constraint firstItem="DxJ-ag-ehz" firstAttribute="leading" secondItem="1lp-4R-BDF" secondAttribute="leading" id="TDz-KD-inc"/>
@@ -100,16 +100,15 @@
                             <constraint firstItem="1lp-4R-BDF" firstAttribute="trailing" secondItem="DxJ-ag-ehz" secondAttribute="trailing" id="ot4-LD-OZ4"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Fqh-4O-P1m"/>
+                    <tabBarItem key="tabBarItem" title="" image="person.fill" catalog="system" id="Fqh-4O-P1m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jew-1y-V91" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4274" y="-45"/>
+            <point key="canvasLocation" x="3204" y="695"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="K6D-xe-zpU">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DIZ-L9-i3u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController id="K3c-r5-HzL" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8hc-xi-nA1">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
@@ -123,56 +122,96 @@
                         <segue destination="g9z-Qb-i3h" kind="relationship" relationship="viewControllers" id="Tc6-3i-iGg"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DIZ-L9-i3u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2724" y="-71"/>
+            <point key="canvasLocation" x="1917" y="256"/>
         </scene>
-        <!--Item-->
+        <!--Create PostVC-->
         <scene sceneID="Nne-r7-s2o">
             <objects>
-                <viewController id="fuL-sS-dHz" customClass="ProfileDetailVC" customModule="BashGate" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="fuL-sS-dHz" customClass="CreatePostVC" customModule="BashGate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zqv-Oy-QYq">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AXg-RN-IDs">
+                                <rect key="frame" x="65" y="150" width="300" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="3Ro-Ba-MEA"/>
+                                    <constraint firstAttribute="width" constant="300" id="HQm-If-XPd"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5s-X7-A48">
+                                <rect key="frame" x="177.66666666666666" y="380" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="fuL-sS-dHz" eventType="touchUpInside" id="fez-S0-ABX"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="TIN-T7-SMg"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96841138599999999" green="0.94470253660000003" blue="0.86375066869999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="T5s-X7-A48" firstAttribute="top" secondItem="AXg-RN-IDs" secondAttribute="bottom" constant="30" id="KTh-0S-3Ix"/>
+                            <constraint firstItem="AXg-RN-IDs" firstAttribute="centerX" secondItem="Zqv-Oy-QYq" secondAttribute="centerX" id="QlZ-GF-Z93"/>
+                            <constraint firstItem="T5s-X7-A48" firstAttribute="centerX" secondItem="Zqv-Oy-QYq" secondAttribute="centerX" id="gXv-nh-fcm"/>
+                            <constraint firstItem="AXg-RN-IDs" firstAttribute="top" secondItem="TIN-T7-SMg" secondAttribute="top" constant="150" id="xir-Cl-VPl"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="hay-0w-9jC"/>
+                    <tabBarItem key="tabBarItem" title="" image="plus" catalog="system" id="hay-0w-9jC"/>
+                    <connections>
+                        <outlet property="imgView" destination="AXg-RN-IDs" id="usN-wW-vPq"/>
+                        <outlet property="uploadBtn" destination="T5s-X7-A48" id="iI8-iv-Sc6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kNo-yQ-59I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4274" y="-786"/>
+            <point key="canvasLocation" x="3203.7209302325582" y="-306.43776824034336"/>
         </scene>
-        <!--Item-->
+        <!--Settings View Controller-->
         <scene sceneID="PN9-tv-MbS">
             <objects>
-                <viewController id="g9z-Qb-i3h" customClass="PostVC" customModule="BashGate" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="g9z-Qb-i3h" customClass="SettingsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="U8M-qO-Utj">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="WKu-BD-DJI"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96841138599999999" green="0.94470253660000003" blue="0.86375066869999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="XGa-Lv-WUK"/>
+                    <tabBarItem key="tabBarItem" title="" image="gearshape.2.fill" catalog="system" id="XGa-Lv-WUK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g6i-Xa-qFt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3329" y="723"/>
+            <point key="canvasLocation" x="3204" y="1645"/>
         </scene>
-        <!--Item-->
+        <!--PostVC-->
         <scene sceneID="vgg-Nh-WaB">
             <objects>
-                <viewController id="yfN-1K-wKv" customClass="CreatePostVC" customModule="BashGate" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="yfN-1K-wKv" customClass="PostVC" customModule="BashGate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="23u-eZ-UpD">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ebz-Bd-IYc">
+                                <rect key="frame" x="0.0" y="0.0" width="430" height="814"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="JMo-BG-OEf"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96841138599999999" green="0.94470253660000003" blue="0.86375066869999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="JMo-BG-OEf" firstAttribute="bottom" secondItem="Ebz-Bd-IYc" secondAttribute="bottom" id="2hv-ec-8QY"/>
+                            <constraint firstItem="Ebz-Bd-IYc" firstAttribute="top" secondItem="JMo-BG-OEf" secondAttribute="top" id="MTD-DX-WHh"/>
+                            <constraint firstItem="JMo-BG-OEf" firstAttribute="trailing" secondItem="Ebz-Bd-IYc" secondAttribute="trailing" id="XoK-Mg-BvU"/>
+                            <constraint firstItem="Ebz-Bd-IYc" firstAttribute="leading" secondItem="JMo-BG-OEf" secondAttribute="leading" id="bs2-UR-ePs"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="QUX-Km-hsz"/>
+                    <tabBarItem key="tabBarItem" title="" image="house.fill" catalog="system" id="QUX-Km-hsz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yBo-E4-SHF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3328" y="-786"/>
+            <point key="canvasLocation" x="3205" y="-1127"/>
         </scene>
         <!--RegisterVC-->
         <scene sceneID="uUh-1k-cvN">
@@ -212,7 +251,7 @@
                                     <constraint firstAttribute="width" constant="200" id="Cim-5v-QGg"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VG9-Yl-Kxv">
                                 <rect key="frame" x="115" y="385" width="200" height="34"/>
@@ -220,7 +259,7 @@
                                     <constraint firstAttribute="width" constant="200" id="Ab4-vK-YRe"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bip-lD-Hku">
                                 <rect key="frame" x="171.66666666666666" y="469" width="86.999999999999972" height="35"/>
@@ -279,13 +318,17 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AlQ-R5-wwK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1429" y="-445"/>
+            <point key="canvasLocation" x="900" y="256"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="HMG-iM-yZ7"/>
+        <segue reference="u8G-BM-swt"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="gearshape.2.fill" catalog="system" width="128" height="101"/>
+        <image name="house.fill" catalog="system" width="128" height="104"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
